# AkesoEDR

./: .gitignore  CMakeLists.txt  LICENSE  README.md  REQUIREMENTS.md  sentinel.conf
common/: constants.h  ipc.h  telemetry.h
sentinel-agent/: CMakeLists.txt  cmd_handler.cpp  cmd_handler.h  config.cpp  config.h  event_processor.cpp  event_processor.h  json_writer.cpp  json_writer.h  main.cpp  pipeline.cpp  pipeline.h  process_table.cpp  process_table.h  service.cpp  service.h
sentinel-agent/scanner/: memory_scanner.cpp  memory_scanner.h  onaccess_scanner.cpp  onaccess_scanner.h  yara_scanner.cpp  yara_scanner.h
sentinel-cli/: CMakeLists.txt  main.cpp
sentinel-drv/: CMakeLists.txt  callbacks_process.c  callbacks_thread.c  comms.c  comms.h  main.c  minifilter.c
sentinel-hook/: CMakeLists.txt  main.c
tests/: CMakeLists.txt
tests/payloads/: test_memscan.cpp
